--- a/tera-multi-ver-domain/pom.xml
+++ b/tera-multi-ver-domain/pom.xml
@@ -10,15 +10,24 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <!-- ★gfwとsfwの差を吸収 -->
+    <profiles>
+        <profile>
+            <id>with-gfw</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.terasoluna.gfw</groupId>
+                    <artifactId>terasoluna-gfw-security-core</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
+
     <dependencies>
         <!-- == Begin TERASOLUNA == -->
         <dependency>
             <groupId>org.terasoluna.gfw</groupId>
             <artifactId>terasoluna-gfw-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.terasoluna.gfw</groupId>
-            <artifactId>terasoluna-gfw-security-core</artifactId>
         </dependency>
         <!--  REMOVE THIS LINE IF YOU USE JPA
         <dependency>
@@ -56,11 +65,14 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- ★sfwから無くなった。必要なら追加しても良い。 -->
+        <!--
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <scope>test</scope>
         </dependency>
+        -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
