--- a/tera-multi-ver-web/pom.xml
+++ b/tera-multi-ver-web/pom.xml
@@ -110,22 +110,28 @@
         <!-- == End Database == -->
 
         <!-- == Begin Unit Test == -->
+        <!-- ★sfwから無くなった。必要なら追加しても良い。 -->
+        <!--
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit-dep</artifactId>
             <scope>test</scope>
         </dependency>
+        -->
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <scope>test</scope>
         </dependency>
 
+        <!-- ★sfwから無くなった。必要なら追加しても良い。 -->
+        <!--
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <scope>test</scope>
         </dependency>
+        -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
