--- a/tera-multi-ver-domain/pom.xml
+++ b/tera-multi-ver-domain/pom.xml
@@ -17,6 +17,10 @@
             <dependencies>
                 <dependency>
                     <groupId>org.terasoluna.gfw</groupId>
+                    <artifactId>terasoluna-gfw-common</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.terasoluna.gfw</groupId>
                     <artifactId>terasoluna-gfw-security-core</artifactId>
                 </dependency>
             </dependencies>
@@ -24,6 +28,11 @@
         <profile>
             <id>with-sfw</id>
             <dependencies>
+                <dependency>
+                    <groupId>org.terasoluna.gfw</groupId>
+                    <artifactId>terasoluna-gfw-common-dependencies</artifactId>
+                    <type>pom</type>
+                </dependency>
                 <dependency>
                     <groupId>org.terasoluna.gfw</groupId>
                     <artifactId>terasoluna-gfw-security-core-dependencies</artifactId>
@@ -35,10 +44,6 @@
 
     <dependencies>
         <!-- == Begin TERASOLUNA == -->
-        <dependency>
-            <groupId>org.terasoluna.gfw</groupId>
-            <artifactId>terasoluna-gfw-common</artifactId>
-        </dependency>
         <!--  REMOVE THIS LINE IF YOU USE JPA
         <dependency>
             <groupId>org.terasoluna.gfw</groupId>
